# looklab

./: .buildme.sh  .clang-format  .gitignore  CMakeLists.txt  compile_commands.json  looklab.pro  looklab.sln  looklab.vcxproj  looklab.vcxproj.filters  todo.txt
src/: argsfile.cpp  argsfile.h  common.h  displaydriver.cpp  displaydriver.h  geo.cpp  geo.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mesh.cpp  mesh.h  nodegraph.cpp  nodegraph.h  parameters.cpp  parameters.h  perftimer.h  renderview.cpp  renderview.h  rman.cpp  rman.h  shaders.h  tif.cpp  tif.h
src/ParamWidgets/: SliderWidget.cpp  SliderWidget.h  boolparam.cpp  boolparam.h  colorparam.cpp  colorparam.h  floatparam.cpp  floatparam.h  sliderparam.cpp  sliderparam.h  sliderwidget.cpp  sliderwidget.h  stringparam.cpp  stringparam.h
